style: fix layout bug between three and blender sections

--- a/modules/blender/Blender.module.css
+++ b/modules/blender/Blender.module.css
@@ -2,6 +2,8 @@
 
 .flex {
 	display: flex;
+	width: 100%;
+	height: 100%;
 }
 
 .content {
